Fix CI build inputs and mtmd CLI gating

--- a/.gitignore
+++ b/.gitignore
@@ -114,8 +114,8 @@ output*.jpg
 *.bin
 *.pt
 *.pth
-models/
-Models/
+/models/
+/Models/
 
 # =============================================================================
 # Workspace data (user-specific)
